feat(windows): capture stabilization review state